# user-space

./: .gitignore  LICENSE  README.md  flake.nix  package-lock.json  result  serve-site.py
.github/workflows/: check.yml  deploy-site.yml
backend/: Cargo.toml  flake.nix  result
backend/.sqlx/: query-4ee24d070fd0e43b9558fd92c9ee35a71c075ea8efd490c4ff8d11c35728c434.json  query-5da7baa2e03dfa27a2762b5b738127d1540f83dfcedd63d59658f0b28a3dca81.json  query-8128663891e48e6d320532b394365484660d202e1ef976b41c14cc466ed12a1f.json  query-90ea70d4dc0524011d03cd42256e2d59845dc57ed500dbfd29b9c181b464d9a3.json
backend/src/: db.rs  handlers.rs  main.rs  routes.rs
site/: README.md  index.html  login.html  package.json  profiles.html  scrum.html
site/css/: login.css  main.css  profiles.css  scrum.css
site/ts/: 99_index.ts  index.js  index.ts  login.ts  loginpage.ts  profiles.ts  shared.ts  tsconfig.json  util.ts
