[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros" ] }
serde = { version = "1.0.210", features = ["derive"] }
warp = "0.3.7"
serde_json = "1.0.128"
env_logger = "0.11.5"
chrono = "0.4"
